# introducao-web-scraping

./: README.md  anotacoes.txt  pyproject.toml
aula00_introducao_python/: aula00.md  aula00.py  aula00_exemplo_02.py  aula00_pandas.py
aula01_introducao_web_scraping/: aula01.md  aula01_exemplo_01.py  aula01_exemplo_02.py  aula01_exemplo_03_NaMao.py  aula01_exemplo_04_RE.py
aula02_beautiful_soup/: aula02.md  aula02_exemplo_01.py  aula02_exemplo_02.py
aula03/: aula03.md  aula03_exemplo_01.py  aula03_exemplo_02.py
